--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -16,3 +16,6 @@ ESP_IDF_VERSION = "v5.2.2"
 
 # Workaround for https://github.com/esp-rs/esp-idf-template/issues/174 
 CRATE_CC_NO_DEFAULTS = "1"
+
+WIFI_SSID = { value = "CHANGE_ME", force = false }
+WIFI_PASS = { value = "CHANGE_ME", force = false }
