--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.49", default-features = false }
 ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }
 smart-leds = "0.4.0"
+anyhow = "1.0.86"
 
 
 [build-dependencies]
