--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ esp-idf-svc = { version = "0.49", default-features = false }
 ws2812-esp32-rmt-driver = { version = "0.9.0", features = ["smart-leds-trait"] }
 smart-leds = "0.4.0"
 anyhow = "1.0.86"
+embedded-svc = "0.28.0"
 
 
 [build-dependencies]
